--- a/10/index.html
+++ b/10/index.html
@@ -194,7 +194,7 @@ The problem with this design is that water will naturally flow from the initial 
 
 
 <u> Adding capacitive sensors </u>
-At a minimum, I wanted to have a fully working system so I decided to try and add capacitive sensors that would detect when the water reached the max line and consequentially turn off the pump. Here is the code I used for the capacitor, taking the different of the high and low reading (from Nathan's site).
+At a minimum, I wanted to have a fully working system so I decided to try and add capacitive sensors that would detect when the water reached the max line and consequentially turn off the pump. Here is the code I used for the capacitor, taking the difference of the high and low reading (from Nathan's site).
 
 <pre><code>
 int analog_pin = A3;
