--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {border: 20px; darkblue; background-color:powderblue ;}
     <div class="col-sm-4">
       <div class="content_img">
         <img src="./12/12.png" width='100%' height='100%'>
-        <div>[Wildcard](./12/index.html)</div>
+        <div>[Final Project: Stage 1](./12/index.html)</div>
       </div>
     </div>
   </div>
