--- a/12/index.html
+++ b/12/index.html
@@ -77,6 +77,11 @@ INCLUDE SCHEMATIC
 <u> Water filter </u>
 
 INCLUDE AMAZON PHOTO
+<div class = "center">
+  <img src="../12/amazon.jpg" 
+     width ="200" height="500"/>
+</div>
+
 
 INCLUDE CAD DRAWINGS
 <div class = "center">
@@ -89,19 +94,19 @@ INCLUDE CAD DRAWINGS
 
 prototype 1 photo
 <div class = "center">
-  <img src="../12/prototype.jpeg" 
+  <img src="../12/prototype.jpg" 
      width ="600" height="400"/>
 </div>
 
 <div class = "center">
-  <img src="../12/ptototype1.2.jpeg" 
+  <img src="../12/ptototype1.2.jpg" 
      width ="600" height="400"/>
 </div>
 
 prototype 2 photos
 
 <div class = "center">
-  <img src="../12/ptototype2.jpeg" 
+  <img src="../12/ptototype2.jpg" 
      width ="600" height="400"/>
 </div>
 
@@ -114,7 +119,7 @@ WEBSITE CODE
 
 WEBSITE ERROR SCREENSHOT
 <div class = "center">
-  <img src="../12/app.jpeg" 
+  <img src="../12/app.jpg" 
      width ="300" height="600"/>
 </div>
 Arduino code - check that comments are updated
@@ -271,9 +276,7 @@ Button and screen one end (mimicking app)
 Pump and water level sensor on other 
 
 Circuit drawing 
-  <img src="../10/system.jpeg" 
-     width ="550" height="300"/>
-</div>
+
 
 Here is the code 
 
@@ -639,6 +642,7 @@ void loop() {
   Serial.println();
 }
 
+</code></pre>
 
 
 </xmp>
