--- a/12/index.html
+++ b/12/index.html
@@ -78,7 +78,7 @@ INCLUDE SCHEMATIC
 
 INCLUDE AMAZON PHOTO
 <div class = "center">
-  <img src="../12/amazon.jpg" 
+  <img src="../12/amazon.jpeg" 
      width ="200" height="500"/>
 </div>
 
@@ -94,19 +94,19 @@ INCLUDE CAD DRAWINGS
 
 prototype 1 photo
 <div class = "center">
-  <img src="../12/prototype.jpg" 
+  <img src="../12/prototype.jpeg" 
      width ="600" height="400"/>
 </div>
 
 <div class = "center">
-  <img src="../12/ptototype1.2.jpg" 
+  <img src="../12/ptototype1.2.jpeg" 
      width ="600" height="400"/>
 </div>
 
 prototype 2 photos
 
 <div class = "center">
-  <img src="../12/ptototype2.jpg" 
+  <img src="../12/ptototype2.jpeg" 
      width ="600" height="400"/>
 </div>
 
@@ -116,10 +116,14 @@ prototype 2 photos
 
 
 WEBSITE CODE
+<div class = "center">
+  <img src="../12/scratch.jpeg" 
+     width ="600" height="400"/>
+</div>
 
 WEBSITE ERROR SCREENSHOT
 <div class = "center">
-  <img src="../12/app.jpg" 
+  <img src="../12/app.jpeg" 
      width ="300" height="600"/>
 </div>
 Arduino code - check that comments are updated
@@ -458,6 +462,7 @@ void loop() {
 Code 2 - for water system
 Still going to try to get app to work - ideal
 
+<pre><code>
 
 #include <esp_now.h>
 #include <WiFi.h>
