--- a/12/index.html
+++ b/12/index.html
@@ -159,14 +159,14 @@ I started out using the Thunkable app creator as it was marketed as "user friend
 
 <div class = "center">
   <img src="../12/scratch.jpg" 
-     width ="600" height="400"/>
+     width ="800" height="600"/>
 </div>
 
 However, when I went to test this on my iphone I kept getting this error: 
 
 <div class = "center">
   <img src="../12/app.jpeg" 
-     width ="300" height="600"/>
+     width ="200" height="500"/>
 </div>
 
 When I googled and searched a little further I realized that while MIT app inventor is compatible with demo testing on IOS, it's bluetooth features are currently only available on Android. My family has an old android phone that I will try and revive over thanksgiving, but in the mean time I will come up with a back up plan (see further below):
@@ -319,8 +319,8 @@ void loop() {
 The one win from this project is that I got my phone to connect to the ESP32:
 
 <div class = "center">
-  <img src="../12/bluetooth.jpg" 
-     width ="600" height="400"/>
+  <img src="../12/bluetooth.jpeg" 
+     width ="200" height="350"/>
 </div>
 
 
@@ -704,10 +704,15 @@ void loop() {
 
 
 Next steps for project:
-1. Finish 3d printing filter parts 
+
+1. Finish 3d printing filter parts
+
 2. Testing app on Android phone
+
 3. Testing water sensor (Soil moisture sensor)
+
 4. Turning motor to pump (worst case use pump available in lab)
+
 5. Put system together
 
 
