--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-1-light-2 u-radius-30 u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                 <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-custom-item u-file-icon u-icon u-icon-circle u-white u-icon-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750"><img src="images/149346.png" alt=""></span>
                   <h4 class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="750">
-                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-1" href=".//01/index.html">WEEK 1</a>
+                    <a class="u-border-2 u-border-black u-btn u-button-style u-hover-palette-1-dark-2 u-none u-text-black u-text-hover-white u-btn-1" href=".//01_intro/index.html">WEEK 1</a>
                   </h4>
                   <p class="u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">Introduction and Documentation<span style="font-weight: 700;"></span>
                   </p>
@@ -189,7 +189,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3712"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Layla Seaver - Environmental Science and Engineering Harvard '24 </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
